--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "apollo-datasource-rest": "^3.6.1",
     "apollo-server": "^3.10.0",
+    "express": "^4.18.1",
     "graphql": "^16.5.0"
   },
   "devDependencies": {
